# rajkumarcoder-quant-analytical-app

./: .gitignore  README.md
quant-analysis-app/: docker-compose.yml  (+1 more)
quant-analysis-app/src/frontend/: pyproject.toml
quant-analysis-app/src/frontend/streamlit_dashboard/pages/: 1_Market_Overview.py  4_Risk_&_Volatility.py  8_Earnings_Impact.py
quant-analysis-app/src/frontend/streamlit_dashboard/src/config/: sidebar_environent_settings.py
quant-analysis-app/src/frontend/streamlit_dashboard/src/services/: earnings_event_market_impact.py  indicators_and_returns.py  market_regime_risk_detection.py
quant-analysis-app/src/frontend/streamlit_dashboard/src/ui_inputs/: market_querry_forms_v2.py  render_portfolio_inputs.py
quant-analysis-app/src/frontend/streamlit_dashboard/src/ui_models/: portfolio_query_inputs.py
quant-analysis-app/src/frontend/streamlit_dashboard/src/utils/: records_to_dataframe.py
quant-analytics-app/src/backend/: .dockerignore  Dockerfile  pyproject.toml  starts.py
quant-analytics-app/src/backend/app/: main.py
quant-analytics-app/src/backend/app/core_configs/: app_settings.py  cache_ttl.py  env_configs.py  exceptions.py  looging.py  rate_limiting_configs.py  response_validation_exception_handler.py
quant-analytics-app/src/backend/app/dependencies/jwt_auth/: jwt_access_token.py  refresh_token_store.py
quant-analytics-app/src/backend/app/dependencies/rate_limiting/: redis_rate_limit.py
quant-analytics-app/src/backend/app/middleware/: auth_context.py  request_logging.py
quant-analytics-app/src/backend/app/resources/: allowed_symbols.csv
(+259 files in other folders)
